--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.15",
+    "faker": "^6.6.6",
     "next": "13.4.19",
+    "next-seo": "^6.1.0",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "slugify": "^1.6.6",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.0.2"
   }
 }
